--- a/src/backend/.env.default
+++ b/src/backend/.env.default
@@ -1,6 +1,10 @@
 DB_PATH=./config/db.sqlite
 FE_PATH=./frontend/browser
 DOWNLOADS_PATH=./downloads
-PORT=3000
+PORT=3500
 REDIS_HOST=localhost
 REDIS_PORT=6379
+DIR_IS_NETSRV=false
+DL_DECRYPTED_ISO=false
+EXTRACT_DL_ARCHIVE=false
+RENAME_EXTRACTED_ISO=false
