--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
       - EXTRACT_DL_ARCHIVE=true    # extract downloaded .7z archives
       - RENAME_EXTRACTED_ISO=true  # rename extracted ISO filename to include game serial number
     volumes:
-      - /tmp:/vl-downloader/backend/downloads:rw
+      - /tmp/config:/vl-downloader/config:rw
+      - /tmp:/vl-downloader/downloads:rw
