--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "./dist/frontend",
+            "outputPath": "./dist",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
